Adjusted nav bar so that Rally Away is no longer a part of it

--- a/Styles/ImageGallery_Style.css
+++ b/Styles/ImageGallery_Style.css
@@ -7,7 +7,7 @@ How do you adjust the width of the images - in relation to the width of the pare
 */
 
 body{
-	background-color: #f5f5dc;
+	background-color: white;
 }
 
 #container{
