Added nav bar to image gallery. Recreated image gallery. Still working on centering, then need to redo @media sizing

--- a/Styles/ImageGallery_Style.css
+++ b/Styles/ImageGallery_Style.css
@@ -10,6 +10,8 @@ body{
 	background-color: white;
 }
 
+
+
 #container{
 	width: 100%;
 }
@@ -56,8 +58,7 @@ body{
 		#haystack{
 			background-image: url(../Images/Haystack.jpg)
 		}
-
-
+<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
 	@media (max-width:1200px) { /* NEARING FULL SCREEN */
 		.images {
 			width: 300px;
