Adjusted image gallery layout. Need to fix responsiveness.

--- a/Styles/JSAboutMe_Style.css
+++ b/Styles/JSAboutMe_Style.css
@@ -3,7 +3,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  font: 400 15px/1.8 "Lato", sans-serif;
+  font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
 }
 
 #siteTitle{
