--- a/Styles/upcoming_style.css
+++ b/Styles/upcoming_style.css
@@ -73,7 +73,7 @@
 }
 
 	#galleryContainer{
-		width: 980px;
+		width: 1000px;
 		margin: 0 auto;
 	}
 
@@ -86,7 +86,9 @@
 	.tripContainer{
 		float: left;
 		width: 300px;
-		margin: 10px;
+		margin: 5px;
+		border: double #D3D3D3;
+    	padding: 5px;
 
 	}
 
@@ -109,3 +111,77 @@
 			transition: all ease-out .7s; 
 
 		}
+
+
+@media (max-width: 980px) {
+  #galleryContainer{
+  	width: 900px;
+  }
+  .tripContainer{
+  	width:250px;
+  }
+  .images{
+  	width: 250px;
+  	height: 250px;
+  }
+
+}
+
+@media (max-width: 800px) {
+  #galleryContainer {
+    width: 700px;
+    margin: 0 auto;
+  }
+  .tripContainer{
+  width:200px;
+  }
+  .images{
+  	width: 200px;
+  	height: 200px;
+  }
+
+}
+
+@media (max-width: 630px) {
+  #galleryContainer {
+    width: 550px;
+    margin: 0 auto;
+  }
+  .tripContainer{
+  width:200px;
+  }
+  .images{
+  	width: 200px;
+  	height: 200px;
+  }
+
+}
+
+@media (max-width: 525px){
+	#navBar2 a{
+		font-size: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  #navBar2 a{
+	font-size: 0;
+  }
+  #pageTitle{
+  	top: 100px;
+  }
+  #pageTitle span.border{
+  	font-size: 30px;
+  }
+  #galleryContainer {
+    width: 310px;
+    margin: 0 auto;
+  }
+  .tripContainer{
+  width: 300px;
+  }
+  .images{
+  	width: 300px;
+  	height: 300px;
+  }
+}
