--- a/Styles/JSAboutMe_Style.css
+++ b/Styles/JSAboutMe_Style.css
@@ -199,8 +199,15 @@ body, html {
 		left: 0px;
   }
   	#navBar{
-		display: none;
+		top: 70px;
+		margin-right: 34%;
+		margin-left: 34%;
+		text-align: center;
+		right: 0px;
   }
+  	#navBar a{
+		font-size: 10px;
+  	}
 
 }
 
